service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-collector-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 55680
    name: otlp
  selector:
    app: opentelemetry-collector
  type: ClusterIP
